--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-p {font family: "Lucida Sans Unicode"; "Lucida Grande"; "sans-serif";
+p {font-family: 'Lato', sans-serif;
 }
- h2{font family: "Lucida Sans Unicode"; "Lucida Grande"; "sans-serif";
+h2{font-family: "Lucida Sans Unicode"; "Lucida Grande"; "sans-serif";
 }
 
 a:hover {
