--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a:focus {
 }
 
 a:active {
-    background-color: cadetblue;
+    background-color: rgb(6, 59, 61);
 }
 
 <ul class="nav nav-pills">
