--- a/style.css
+++ b/style.css
@@ -1,18 +1,50 @@
-p {font-family: 'Lato', sans-serif;
-}
-h2{font-family: "Lucida Sans Unicode"; "Lucida Grande"; "sans-serif";
-}
 
-a:hover {
-    background-color: aqua;
+:root {
+  --jumbotron-padding-y: 3rem;
 }
 
-a:focus {
-    background-color: aquamarine;
+.jumbotron {
+  padding-top: var(--jumbotron-padding-y);
+  padding-bottom: var(--jumbotron-padding-y);
+  margin-bottom: 0;
+  background-color: #fff;
+}
+@media (min-width: 768px) {
+  .jumbotron {
+    padding-top: calc(var(--jumbotron-padding-y) * 2);
+    padding-bottom: calc(var(--jumbotron-padding-y) * 2);
+  }
 }
 
-a:active {
-    background-color: rgb(6, 59, 61);
+.jumbotron p:last-child {
+  margin-bottom: 0;
 }
 
+.jumbotron-heading {
+  font-weight: 300;
+}
 
+.jumbotron .container {
+  max-width: 40rem;
+}
+
+footer {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+footer p {
+  margin-bottom: .25rem;
+}
+
+.card2 {
+  width: 348px;
+  height: 225px;
+  border-color: cornflowerblue;
+  border-style: solid
+  /* margin: 10px;
+  position: relative;
+  padding: 15px 30px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease; */
+}
