updates to repo links

--- a/style.css
+++ b/style.css
@@ -48,3 +48,41 @@ footer p {
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease; */
 }
+
+.btn-info {
+  color: #ffffff;
+  background-color: #34aadc;
+  border-color: #34aadc;
+}
+.btn-info:hover,
+.btn-info:focus,
+.btn-info:active,
+.btn-info.active,
+.open .dropdown-toggle.btn-info {
+  color: #34aadc;
+  background: transparent;
+  border-color: #34aadc;
+}
+.btn-info:active,
+.btn-info.active,
+.open .dropdown-toggle.btn-info {
+  background-image: none;
+}
+.btn-info.disabled,
+.btn-info[disabled],
+fieldset[disabled] .btn-info,
+.btn-info.disabled:hover,
+.btn-info[disabled]:hover,
+fieldset[disabled] .btn-info:hover,
+.btn-info.disabled:focus,
+.btn-info[disabled]:focus,
+fieldset[disabled] .btn-info:focus,
+.btn-info.disabled:active,
+.btn-info[disabled]:active,
+fieldset[disabled] .btn-info:active,
+.btn-info.disabled.active,
+.btn-info[disabled].active,
+fieldset[disabled] .btn-info.active {
+  background-color: #34aadc;
+  border-color: #34aadc;
+}
