updates to repo links

--- a/style.css
+++ b/style.css
@@ -86,3 +86,41 @@ fieldset[disabled] .btn-info.active {
   background-color: #34aadc;
   border-color: #34aadc;
 }
+.btn-success {
+  color: #ffffff;
+  background-color: #4cd964;
+  border-color: #4cd964;
+}
+.btn-success:hover,
+.btn-success:focus,
+.btn-success:active,
+.btn-success.active,
+.open .dropdown-toggle.btn-success {
+  color: #4cd964;
+  background: transparent;
+  border-color: #4cd964;
+}
+.btn-success:active,
+.btn-success.active,
+.open .dropdown-toggle.btn-success {
+  background-image: none;  
+  outline: none;
+}
+.btn-success.disabled,
+.btn-success[disabled],
+fieldset[disabled] .btn-success,
+.btn-success.disabled:hover,
+.btn-success[disabled]:hover,
+fieldset[disabled] .btn-success:hover,
+.btn-success.disabled:focus,
+.btn-success[disabled]:focus,
+fieldset[disabled] .btn-success:focus,
+.btn-success.disabled:active,
+.btn-success[disabled]:active,
+fieldset[disabled] .btn-success:active,
+.btn-success.disabled.active,
+.btn-success[disabled].active,
+fieldset[disabled] .btn-success.active {
+  background-color: #4cd964;
+  border-color: #4cd964;
+}
